--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><body><h1>My First Website on GitHub!</h1></body></html>
+<html><body style="background-color: #2c3e50; color: white; text-align: center; font-family: sans-serif; padding-top: 50px;"><h1>My Amazing Website!</h1><p>Updated via SSH successfully.</p></body></html>
