--- a/index.html
+++ b/index.html
@@ -5,25 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>موقعي الشخصي | محمد</title>
     <style>
-        body { font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; background-color: #f4f7f6; margin: 0; display: flex; justify-content: center; align-items: center; min-height: 100vh; color: #333; }
-        .card { background: white; padding: 2rem; border-radius: 15px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); text-align: center; max-width: 400px; width: 90%; }
-        .profile-img { width: 120px; height: 120px; border-radius: 50%; background: #2c3e50; margin: 0 auto 1rem; display: flex; align-items: center; justify-content: center; color: white; font-size: 3rem; border: 5px solid #3498db; }
-        h1 { margin: 10px 0; color: #2c3e50; }
-        p { color: #7f8c8d; line-height: 1.6; }
-        .links { margin-top: 20px; }
-        .btn { display: inline-block; padding: 10px 20px; margin: 5px; background-color: #3498db; color: white; text-decoration: none; border-radius: 5px; transition: 0.3s; }
-        .btn:hover { background-color: #2980b9; transform: translateY(-2px); }
+        body { font-family: sans-serif; background-color: #f0f2f5; margin: 0; display: flex; justify-content: center; align-items: center; min-height: 100vh; }
+        .card { background: white; padding: 30px; border-radius: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); text-align: center; max-width: 350px; }
+        .profile-img { width: 180px; height: 180px; border-radius: 15px; object-fit: cover; border: 4px solid #3498db; margin-bottom: 15px; }
+        h1 { color: #1c1e21; margin: 10px 0; }
+        p { color: #606770; font-size: 1.1em; }
+        .github-btn { display: inline-block; background: #24292e; color: white; padding: 10px 20px; text-decoration: none; border-radius: 8px; margin-top: 15px; }
     </style>
 </head>
 <body>
     <div class="card">
-        <div class="profile-img">M</div>
-        <h1>محمد (Mohamed)</h1>
-        <p>مطور ويب مبتدئ | شغوف بتعلم التقنيات الجديدة وبناء المشاريع البرمجية الرائعة.</p>
-        <div class="links">
-            <a href="#" class="btn">GitHub</a>
-            <a href="#" class="btn">تواصل معي</a>
-        </div>
+        <img src="me.jpg" alt="محمد" class="profile-img">
+        <h1>محمد</h1>
+        <p>مرحباً بكم في موقعي الشخصي! أنا مطور ويب طموح، وهذا أول مشروع لي مرفوع عبر SSH.</p>
+        <a href="https://github.com/mohamedcolver-bot" class="github-btn">حسابي على GitHub</a>
     </div>
 </body>
 </html>
