إضافة نافذة ترحيب تفاعلية بالاسم

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>معرض أعمال محمد</title>
+    <title>موقع محمد التفاعلي</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root { --bg: #f8f9fa; --card: #fff; --text: #333; --primary: #3498db; }
@@ -12,57 +12,39 @@
         .profile-card { background: var(--card); padding: 30px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); text-align: center; max-width: 400px; width: 100%; margin-bottom: 30px; }
         .profile-img { width: 120px; height: 120px; border-radius: 50%; border: 4px solid var(--primary); object-fit: cover; }
         .theme-btn { background: var(--primary); color: white; border: none; padding: 10px 20px; border-radius: 50px; cursor: pointer; margin-bottom: 15px; }
-        .section-title { margin: 20px 0; font-size: 24px; border-bottom: 3px solid var(--primary); padding-bottom: 5px; }
+        .welcome-msg { font-size: 18px; color: var(--primary); font-weight: bold; margin-bottom: 10px; }
         .projects-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; width: 100%; max-width: 900px; }
         .project-item { background: var(--card); padding: 20px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; transition: 0.3s; border: 1px solid #eee; }
-        .project-item:hover { transform: translateY(-5px); border-color: var(--primary); }
-        .project-icon { font-size: 40px; color: var(--primary); margin-bottom: 10px; }
         .btn { display: inline-block; margin-top: 10px; padding: 8px 15px; background: var(--primary); color: white; text-decoration: none; border-radius: 5px; font-weight: bold; }
-        .btn:hover { background: #2980b9; }
     </style>
 </head>
-<body>
+<body onload="welcomeUser()">
 
     <button class="theme-btn" onclick="toggleTheme()">تبديل الوضع <i class="fas fa-adjust"></i></button>
 
     <div class="profile-card">
+        <div id="greeting" class="welcome-msg"></div>
         <img src="me.jpg" alt="محمد" class="profile-img">
         <h1>محمد</h1>
-        <p>مطور ويب تونسي طموح</p>
-        <div style="display: flex; justify-content: center; gap: 20px;">
-             <a href="https://wa.me/21655391749" style="color: #25D366; font-size: 30px;"><i class="fab fa-whatsapp"></i></a>
-             <a href="https://github.com/mohamedcolver-bot" style="color: var(--text); font-size: 30px;"><i class="fab fa-github"></i></a>
-        </div>
+        <p>مرحباً بك في معرض أعمالي المطور</p>
     </div>
 
-    <h2 class="section-title">مشاريعي الحالية</h2>
-    
     <div class="projects-grid">
-        <div class="project-item">
-            <i class="fas fa-tasks project-icon"></i>
-            <h3>تطبيق مهام</h3>
-            <p>تطبيق لتنظيم الوقت والمهام اليومية.</p>
-            <a href="todo.html" class="btn">فتح التطبيق</a>
-        </div>
-        
-        <div class="project-item">
-            <i class="fas fa-store project-icon"></i>
-            <h3>متجر إلكتروني</h3>
-            <p>مشروع بناء متجر متكامل باستخدام HTML و CSS.</p>
-            <a href="shop.html" class="btn">فتح المتجر</a>
-        </div>
-
-        <div class="project-item">
-            <i class="fas fa-gamepad project-icon"></i>
-            <h3>لعبة الثعبان</h3>
-            <p>لعبة كلاسيكية ممتعة تعتمد على الجافاسكريبت.</p>
-            <a href="snake.html" class="btn">العب الآن</a>
-        </div>
+        <div class="project-item"><h3>تطبيق مهام</h3><a href="todo.html" class="btn">فتح</a></div>
+        <div class="project-item"><h3>متجر إلكتروني</h3><a href="shop.html" class="btn">فتح</a></div>
+        <div class="project-item"><h3>لعبة الثعبان</h3><a href="snake.html" class="btn">العب</a></div>
     </div>
 
     <script>
         function toggleTheme() {
             document.body.classList.toggle("dark-theme");
+        }
+        function welcomeUser() {
+            let name = prompt("مرحباً بك! ما هو اسمك؟");
+            if (name == null || name == "") {
+                name = "صديقي";
+            }
+            document.getElementById("greeting").innerHTML = "أهلاً بك يا " + name + " في موقعي!";
         }
     </script>
 </body>
