--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موقع محمد التفاعلي</title>
+    <title>موقع محمد الذكي</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root { --bg: #f8f9fa; --card: #fff; --text: #333; --primary: #3498db; }
@@ -12,13 +12,14 @@
         .profile-card { background: var(--card); padding: 30px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); text-align: center; max-width: 400px; width: 100%; margin-bottom: 30px; }
         .profile-img { width: 120px; height: 120px; border-radius: 50%; border: 4px solid var(--primary); object-fit: cover; }
         .theme-btn { background: var(--primary); color: white; border: none; padding: 10px 20px; border-radius: 50px; cursor: pointer; margin-bottom: 15px; }
-        .welcome-msg { font-size: 18px; color: var(--primary); font-weight: bold; margin-bottom: 10px; }
+        .welcome-msg { font-size: 18px; color: var(--primary); font-weight: bold; margin-bottom: 10px; min-height: 27px; }
         .projects-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; width: 100%; max-width: 900px; }
-        .project-item { background: var(--card); padding: 20px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; transition: 0.3s; border: 1px solid #eee; }
+        .project-item { background: var(--card); padding: 20px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; border: 1px solid #eee; }
         .btn { display: inline-block; margin-top: 10px; padding: 8px 15px; background: var(--primary); color: white; text-decoration: none; border-radius: 5px; font-weight: bold; }
+        .reset-btn { margin-top: 15px; background: none; border: none; color: #95a5a6; cursor: pointer; font-size: 12px; text-decoration: underline; }
     </style>
 </head>
-<body onload="welcomeUser()">
+<body onload="checkFirstVisit()">
 
     <button class="theme-btn" onclick="toggleTheme()">تبديل الوضع <i class="fas fa-adjust"></i></button>
 
@@ -26,7 +27,8 @@
         <div id="greeting" class="welcome-msg"></div>
         <img src="me.jpg" alt="محمد" class="profile-img">
         <h1>محمد</h1>
-        <p>مرحباً بك في معرض أعمالي المطور</p>
+        <p>مرحباً بك في موقعي التفاعلي</p>
+        <button class="reset-btn" onclick="forgetMe()">مسح الاسم من الذاكرة</button>
     </div>
 
     <div class="projects-grid">
@@ -39,12 +41,35 @@
         function toggleTheme() {
             document.body.classList.toggle("dark-theme");
         }
-        function welcomeUser() {
+
+        function checkFirstVisit() {
+            // محاولة جلب الاسم من ذاكرة المتصفح
+            let savedName = localStorage.getItem("userName");
+
+            if (savedName) {
+                // إذا كان الاسم موجوداً، نعرضه مباشرة
+                document.getElementById("greeting").innerHTML = "أهلاً بك مجدداً، " + savedName + "!";
+            } else {
+                // إذا لم يكن موجوداً، نطلبه ونحفظه
+                askName();
+            }
+        }
+
+        function askName() {
             let name = prompt("مرحباً بك! ما هو اسمك؟");
             if (name == null || name == "") {
                 name = "صديقي";
             }
+            // حفظ الاسم في الذاكرة الدائمة
+            localStorage.setItem("userName", name);
             document.getElementById("greeting").innerHTML = "أهلاً بك يا " + name + " في موقعي!";
+        }
+
+        function forgetMe() {
+            // حذف البيانات من الذاكرة
+            localStorage.removeItem("userName");
+            alert("تم مسح الاسم. سيتم سؤالك مجدداً عند تحديث الصفحة.");
+            location.reload();
         }
     </script>
 </body>
