--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موقع محمد الذكي</title>
+    <title>موقع محمد المتكامل</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root { --bg: #f8f9fa; --card: #fff; --text: #333; --primary: #3498db; }
         .dark-theme { --bg: #121212; --card: #1e1e1e; --text: #f1f1f1; }
         body { background: var(--bg); color: var(--text); font-family: sans-serif; transition: 0.4s; margin: 0; padding: 20px; display: flex; flex-direction: column; align-items: center; }
         .profile-card { background: var(--card); padding: 30px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); text-align: center; max-width: 400px; width: 100%; margin-bottom: 30px; }
-        .profile-img { width: 120px; height: 120px; border-radius: 50%; border: 4px solid var(--primary); object-fit: cover; }
-        .theme-btn { background: var(--primary); color: white; border: none; padding: 10px 20px; border-radius: 50px; cursor: pointer; margin-bottom: 15px; }
-        .welcome-msg { font-size: 18px; color: var(--primary); font-weight: bold; margin-bottom: 10px; min-height: 27px; }
+        .profile-img { width: 120px; height: 120px; border-radius: 50%; border: 4px solid var(--primary); object-fit: cover; margin-bottom: 15px; }
+        .welcome-msg { font-size: 18px; color: var(--primary); font-weight: bold; margin-bottom: 10px; }
+        .social-links { display: flex; justify-content: center; gap: 25px; margin: 20px 0; }
+        .social-links a { font-size: 35px; transition: 0.3s; }
+        .social-links .fa-whatsapp { color: #25D366; }
+        .social-links .fa-github { color: var(--text); }
+        .social-links a:hover { transform: scale(1.2); }
         .projects-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; width: 100%; max-width: 900px; }
         .project-item { background: var(--card); padding: 20px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; border: 1px solid #eee; }
         .btn { display: inline-block; margin-top: 10px; padding: 8px 15px; background: var(--primary); color: white; text-decoration: none; border-radius: 5px; font-weight: bold; }
-        .reset-btn { margin-top: 15px; background: none; border: none; color: #95a5a6; cursor: pointer; font-size: 12px; text-decoration: underline; }
+        .theme-btn { background: var(--primary); color: white; border: none; padding: 10px 20px; border-radius: 50px; cursor: pointer; margin-bottom: 15px; }
     </style>
 </head>
 <body onload="checkFirstVisit()">
@@ -27,9 +31,15 @@
         <div id="greeting" class="welcome-msg"></div>
         <img src="me.jpg" alt="محمد" class="profile-img">
         <h1>محمد</h1>
-        <p>مرحباً بك في موقعي التفاعلي</p>
-        <button class="reset-btn" onclick="forgetMe()">مسح الاسم من الذاكرة</button>
+        <p>مطور ويب تونسي | تواصل معي عبر:</p>
+        
+        <div class="social-links">
+            <a href="https://wa.me/21655391749" target="_blank" title="واتساب"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://github.com/mohamedcolver-bot" target="_blank" title="جيت هاب"><i class="fab fa-github"></i></a>
+        </div>
     </div>
+
+    <h2 style="margin-bottom: 20px; border-bottom: 2px solid var(--primary);">مشاريعي</h2>
 
     <div class="projects-grid">
         <div class="project-item"><h3>تطبيق مهام</h3><a href="todo.html" class="btn">فتح</a></div>
@@ -38,38 +48,18 @@
     </div>
 
     <script>
-        function toggleTheme() {
-            document.body.classList.toggle("dark-theme");
-        }
-
+        function toggleTheme() { document.body.classList.toggle("dark-theme"); }
         function checkFirstVisit() {
-            // محاولة جلب الاسم من ذاكرة المتصفح
             let savedName = localStorage.getItem("userName");
-
             if (savedName) {
-                // إذا كان الاسم موجوداً، نعرضه مباشرة
                 document.getElementById("greeting").innerHTML = "أهلاً بك مجدداً، " + savedName + "!";
             } else {
-                // إذا لم يكن موجوداً، نطلبه ونحفظه
-                askName();
+                let name = prompt("مرحباً! ما هو اسمك؟");
+                if (name) {
+                    localStorage.setItem("userName", name);
+                    document.getElementById("greeting").innerHTML = "أهلاً بك يا " + name + "!";
+                }
             }
-        }
-
-        function askName() {
-            let name = prompt("مرحباً بك! ما هو اسمك؟");
-            if (name == null || name == "") {
-                name = "صديقي";
-            }
-            // حفظ الاسم في الذاكرة الدائمة
-            localStorage.setItem("userName", name);
-            document.getElementById("greeting").innerHTML = "أهلاً بك يا " + name + " في موقعي!";
-        }
-
-        function forgetMe() {
-            // حذف البيانات من الذاكرة
-            localStorage.removeItem("userName");
-            alert("تم مسح الاسم. سيتم سؤالك مجدداً عند تحديث الصفحة.");
-            location.reload();
         }
     </script>
 </body>
