إضافة صفحة المنتدى التفاعلية

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <div style="font-size: 25px;">
             <a href="https://wa.me/21655391749" style="color:#25D366; margin:10px;"><i class="fab fa-whatsapp"></i></a>
             <a href="https://github.com/mohamedcolver-bot" style="color:#333; margin:10px;"><i class="fab fa-github"></i></a>
+        <a href="forum.html" class="item"><i class="fas fa-users"></i><br>المنتدى</a>
         </div>
+        <a href="forum.html" class="item"><i class="fas fa-users"></i><br>المنتدى</a>
     </div>
 
     <div class="grid">
@@ -31,6 +33,7 @@
         <a href="todo.html" class="item"><i class="fas fa-check-double"></i><br>تطبيق المهام</a>
         <a href="calc.html" class="item"><i class="fas fa-calculator"></i><br>الحاسبة الذكية</a>
         <a href="shop.html" class="item"><i class="fas fa-shopping-cart"></i><br>المتجر</a>
+        <a href="forum.html" class="item"><i class="fas fa-users"></i><br>المنتدى</a>
     </div>
 </body>
 </html>
