إضافة عداد الزوار وحقوق الملكية

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         .item { background: var(--card); padding: 20px; border-radius: 15px; text-align: center; transition: 0.3s; text-decoration: none; color: inherit; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
         .item:hover { transform: translateY(-5px); background: var(--primary); color: white; }
         .item i { font-size: 40px; margin-bottom: 10px; }
+        .footer { margin-top: 40px; text-align: center; color: #7f8c8d; }
+        .visitor-counter { margin-top: 10px; padding: 10px; background: #fff; border-radius: 10px; display: inline-block; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
     </style>
 </head>
 <body>
@@ -22,9 +24,7 @@
         <div style="font-size: 25px;">
             <a href="https://wa.me/21655391749" style="color:#25D366; margin:10px;"><i class="fab fa-whatsapp"></i></a>
             <a href="https://github.com/mohamedcolver-bot" style="color:#333; margin:10px;"><i class="fab fa-github"></i></a>
-        <a href="forum.html" class="item"><i class="fas fa-users"></i><br>المنتدى</a>
         </div>
-        <a href="forum.html" class="item"><i class="fas fa-users"></i><br>المنتدى</a>
     </div>
 
     <div class="grid">
@@ -34,6 +34,14 @@
         <a href="calc.html" class="item"><i class="fas fa-calculator"></i><br>الحاسبة الذكية</a>
         <a href="shop.html" class="item"><i class="fas fa-shopping-cart"></i><br>المتجر</a>
         <a href="forum.html" class="item"><i class="fas fa-users"></i><br>المنتدى</a>
+    </div>
+
+    <div class="footer">
+        <p>جميع الحقوق محفوظة لمحمد © 2026</p>
+        <div class="visitor-counter">
+            <i class="fas fa-eye"></i> عدد الزوار: 
+            <img src="https://hitwebcounter.com/counter/counter.php?page=mohamed_site_2026&style=0006&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter" border="0" style="vertical-align: middle;">
+        </div>
     </div>
 </body>
 </html>
