--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <style>
         :root { --bg: #050505; --gold: #d4af37; --text: #e0e0e0; --card: rgba(26, 26, 26, 0.9); }
         body { background: var(--bg); color: var(--text); font-family: sans-serif; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; }
-        .contact-card { background: var(--card); padding: 40px; border-radius: 20px; border: 1px solid var(--gold); box-shadow: 0 0 30px rgba(212, 175, 55, 0.2); width: 100%; max-width: 500px; text-align: center; }
+        .contact-card { background: var(--card); padding: 40px; border-radius: 20px; border: 1px solid var(--gold); box-shadow: 0 0 30px rgba(212, 175, 55, 0.2); width: 100%; max-width: 500px; text-align: center; backdrop-filter: blur(10px); }
         h2 { color: var(--gold); margin-bottom: 20px; }
         input, textarea { width: 100%; padding: 12px; margin: 10px 0; background: #111; border: 1px solid #333; color: white; border-radius: 8px; box-sizing: border-box; }
         input:focus, textarea:focus { border-color: var(--gold); outline: none; }
@@ -20,13 +20,13 @@
 <body>
     <div class="contact-card">
         <h2><i class="fas fa-paper-plane"></i> أرسل لي رسالة</h2>
-        <p>لديك فكرة مشروع أو استفسار؟ أنا هنا للرد عليك.</p>
+        <p>مرحباً بك! يسعدني تلقي رسائلك واقتراحاتك.</p>
         
-        <form action="https://formspree.io/f/mohamed_contact" method="POST">
+        <form action="https://formspree.io/f/xeeljbka" method="POST">
             <input type="text" name="name" placeholder="اسمك الكامل" required>
             <input type="email" name="_replyto" placeholder="بريدك الإلكتروني" required>
             <textarea name="message" rows="5" placeholder="اكتب رسالتك هنا..." required></textarea>
-            <button type="submit" class="send-btn">إرسال الآن</button>
+            <button type="submit" class="send-btn">إرسال الرسالة</button>
         </form>
         
         <a href="index.html" class="back">← العودة للرئيسية</a>
