إضافة ألعاب جديدة وتحديث القائمة

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             <a href="todo.html" class="item"><i class="fas fa-star"></i><br>المهام</a>
             <a href="calc.html" class="item"><i class="fas fa-calculator"></i><br>الحاسبة</a>
             <a href="shop.html" class="item"><i class="fas fa-gem"></i><br>المتجر</a>
+        <a href="whack.html" class="item"><i class="fas fa-hammer"></i><br>الضرب السريع</a>
+        <a href="jump.html" class="item"><i class="fas fa-arrow-up"></i><br>القفز الفضائي</a>
         <a href="contact.html" class="item"><i class="fas fa-envelope"></i><br>تواصل معي</a>
             <a href="forum.html" class="item"><i class="fas fa-crown"></i><br>المنتدى</a>
         </div>
