--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             <a href="shop.html" class="item"><i class="fas fa-gem"></i><br>المتجر</a>
         <a href="whack.html" class="item"><i class="fas fa-hammer"></i><br>الضرب السريع</a>
         <a href="jump.html" class="item"><i class="fas fa-arrow-up"></i><br>القفز الفضائي</a>
+        <a href="race.html" class="item"><i class="fas fa-car"></i><br>سباق السيارات</a>
+        <a href="weather.html" class="item"><i class="fas fa-cloud-sun"></i><br>أحوال الطقس</a>
         <a href="contact.html" class="item"><i class="fas fa-envelope"></i><br>تواصل معي</a>
             <a href="forum.html" class="item"><i class="fas fa-crown"></i><br>المنتدى</a>
         </div>
