إضافة صائد الفضاء وتطبيق الملاحظات

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         <a href="jump.html" class="item"><i class="fas fa-arrow-up"></i><br>القفز الفضائي</a>
         <a href="race.html" class="item"><i class="fas fa-car"></i><br>سباق السيارات</a>
         <a href="weather.html" class="item"><i class="fas fa-cloud-sun"></i><br>أحوال الطقس</a>
+        <a href="shooter.html" class="item"><i class="fas fa-crosshairs"></i><br>صائد الفضاء</a>
+        <a href="notes.html" class="item"><i class="fas fa-sticky-note"></i><br>الملاحظات</a>
         <a href="contact.html" class="item"><i class="fas fa-envelope"></i><br>تواصل معي</a>
             <a href="forum.html" class="item"><i class="fas fa-crown"></i><br>المنتدى</a>
         </div>
