إضافة لوحة تحكم المدير السرية

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <div style="font-size: 30px;">
                 <a href="https://wa.me/21655391749" style="color:var(--gold); margin:0 15px;"><i class="fab fa-whatsapp"></i></a>
                 <a href="https://github.com/mohamedcolver-bot" style="color:var(--gold); margin:0 15px;"><i class="fab fa-github"></i></a>
+        <p style="font-size:10px; opacity:0.3;"><a href="admin.html" style="color:gray; text-decoration:none;">إدارة النظام</a></p>
             </div>
+        <p style="font-size:10px; opacity:0.3;"><a href="admin.html" style="color:gray; text-decoration:none;">إدارة النظام</a></p>
         </div>
 
         <div class="grid">
@@ -62,12 +64,15 @@
         <a href="notes.html" class="item"><i class="fas fa-sticky-note"></i><br>الملاحظات</a>
         <a href="contact.html" class="item"><i class="fas fa-envelope"></i><br>تواصل معي</a>
             <a href="forum.html" class="item"><i class="fas fa-crown"></i><br>المنتدى</a>
+        <p style="font-size:10px; opacity:0.3;"><a href="admin.html" style="color:gray; text-decoration:none;">إدارة النظام</a></p>
         </div>
 
         <div class="footer">
             <p>© 2026 تم التطوير بواسطة محمد</p>
             <img src="https://hitwebcounter.com/counter/counter.php?page=mohamed_star&style=0005&nbdigits=5&type=page&initCount=0" border="0">
+        <p style="font-size:10px; opacity:0.3;"><a href="admin.html" style="color:gray; text-decoration:none;">إدارة النظام</a></p>
         </div>
+        <p style="font-size:10px; opacity:0.3;"><a href="admin.html" style="color:gray; text-decoration:none;">إدارة النظام</a></p>
     </div>
 
     <script>
