--- a/index.html
+++ b/index.html
@@ -3,48 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إمبراطورية محمد الرقمية</title>
+    <title>إمبراطورية محمد</title>
+    <link rel="icon" href="https://img.icons8.com/flat-round/64/crown.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --bg: #050505; --card: rgba(26, 26, 26, 0.9); --gold: #d4af37; --text: #e0e0e0; --star-color: #d4af37; }
+        :root { --bg: #050505; --gold: #d4af37; --text: #e0e0e0; }
         body, html { margin: 0; padding: 0; width: 100%; height: 100%; background: var(--bg); color: var(--text); font-family: sans-serif; overflow: hidden; }
         #starCanvas { position: fixed; top: 0; left: 0; z-index: -1; }
         
-        /* الشعار المركزي */
+        /* الشعار التفاعلي */
+        .logo-container { perspective: 1000px; margin-top: 30px; }
         .main-logo {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 5em; /* حجم كبير للشعار */
+            font-size: 5.5em;
             color: var(--gold);
-            text-shadow: 0 0 10px rgba(212, 175, 55, 0.8), 0 0 20px rgba(212, 175, 55, 0.6); /* توهج ذهبي */
-            margin-top: 40px; /* مسافة من الأعلى */
-            margin-bottom: 30px;
-            position: relative;
-            z-index: 100; /* ليكون فوق النجوم */
-            animation: pulse 2s infinite alternate; /* تأثير نبض خفيف */
-        }
-        @keyframes pulse {
-            from { transform: scale(1); opacity: 0.9; }
-            to { transform: scale(1.05); opacity: 1; }
+            text-shadow: 0 0 20px rgba(212, 175, 55, 0.5);
+            cursor: pointer;
+            transition: transform 0.1s;
+            user-select: none;
         }
 
-        /* شريط البحث */
         .search-box { width: 80%; max-width: 400px; margin: 20px auto; position: relative; }
         .search-box input { width: 100%; padding: 12px 40px; border-radius: 25px; border: 1px solid var(--gold); background: rgba(0,0,0,0.5); color: white; outline: none; }
         .search-box i { position: absolute; right: 15px; top: 15px; color: var(--gold); }
 
-        /* الأزرار الجانبية للتحكم */
-        .controls { position: fixed; left: 20px; bottom: 20px; display: flex; flex-direction: column; gap: 10px; z-index: 2000; }
-        .control-btn { background: var(--card); border: 1px solid var(--gold); color: var(--gold); padding: 10px; border-radius: 50%; cursor: pointer; transition: 0.3s; }
-        .control-btn:hover { background: var(--gold); color: black; }
-
-        .content { display: flex; flex-direction: column; align-items: center; padding: 10px 20px; height: calc(100vh - 60px); overflow-y: auto; }
+        .content { display: flex; flex-direction: column; align-items: center; padding: 10px 20px; height: calc(100vh - 150px); overflow-y: auto; }
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 15px; width: 100%; max-width: 900px; }
-        .item { background: var(--card); padding: 20px; border-radius: 15px; text-align: center; cursor: pointer; border: 1px solid #333; transition: 0.3s; }
-        .item.hidden { display: none; }
+        .item { background: rgba(26, 26, 26, 0.9); padding: 20px; border-radius: 15px; text-align: center; cursor: pointer; border: 1px solid #333; transition: 0.3s; }
         .item:hover { border-color: var(--gold); transform: translateY(-5px); box-shadow: 0 5px 15px rgba(212, 175, 55, 0.3); }
         .item i { font-size: 30px; color: var(--gold); margin-bottom: 10px; }
 
-        /* النافذة المنبثقة */
         .modal { display: none; position: fixed; z-index: 3000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); }
         .modal-content { position: relative; width: 95%; height: 90%; margin: 2% auto; border: 1px solid var(--gold); border-radius: 15px; overflow: hidden; }
         .close { position: absolute; top: 10px; left: 20px; color: white; font-size: 40px; cursor: pointer; z-index: 3001; }
@@ -54,16 +41,13 @@
 <body onload="init()">
     <canvas id="starCanvas"></canvas>
     
-    <div class="controls">
-        <button class="control-btn" onclick="changeStarColor('#3498db')" title="فضاء أزرق"><i class="fas fa-palette"></i></button>
-        <button class="control-btn" onclick="toggleMusic()"><i id="mIcon" class="fas fa-play"></i></button>
+    <div class="logo-container" onmousemove="tiltLogo(event)" onmouseleave="resetLogo()">
+        <h1 class="main-logo" id="logo">محمد</h1>
     </div>
-
-    <h1 class="main-logo">محمد</h1>
 
     <div class="search-box">
         <i class="fas fa-search"></i>
-        <input type="text" id="searchInput" onkeyup="searchApps()" placeholder="ابحث عن لعبة أو تطبيق...">
+        <input type="text" id="searchInput" onkeyup="searchApps()" placeholder="ابحث عن تطبيق...">
     </div>
 
     <div id="gameModal" class="modal">
@@ -72,41 +56,26 @@
     </div>
 
     <div class="content">
-        <div class="grid" id="appGrid">
-            <div class="item" onclick="openApp('snake.html')"><i class="fas fa-gamepad"></i><br><span>الثعبان</span></div>
-            <div class="item" onclick="openApp('race.html')"><i class="fas fa-car"></i><br><span>السباق</span></div>
-            <div class="item" onclick="openApp('shooter.html')"><i class="fas fa-crosshairs"></i><br><span>صائد الفضاء</span></div>
-            <div class="item" onclick="openApp('jump.html')"><i class="fas fa-arrow-up"></i><br><span>القفز</span></div>
-            <div class="item" onclick="openApp('whack.html')"><i class="fas fa-hammer"></i><br><span>ضرب الذهب</span></div>
-            <div class="item" onclick="openApp('memory.html')"><i class="fas fa-brain"></i><br><span>الذاكرة</span></div>
-            <div class="item" onclick="openApp('calc.html')"><i class="fas fa-calculator"></i><br><span>الحاسبة</span></div>
-            <div class="item" onclick="openApp('todo.html')"><i class="fas fa-check-circle"></i><br><span>المهام</span></div>
-            <div class="item" onclick="openApp('notes.html')"><i class="fas fa-sticky-note"></i><br><span>الملاحظات</span></div>
-            <div class="item" onclick="openApp('weather.html')"><i class="fas fa-cloud-sun"></i><br><span>الطقس</span></div>
-            <div class="item" onclick="openApp('shop.html')"><i class="fas fa-shopping-bag"></i><br><span>المتجر</span></div>
-            <div class="item" onclick="openApp('forum.html')"><i class="fas fa-users"></i><br><span>المنتدى</span></div>
-            <div class="item" onclick="openApp('contact.html')"><i class="fas fa-envelope"></i><br><span>اتصل بي</span></div>
-            <div class="item" onclick="openApp('admin.html')"><i class="fas fa-user-shield"></i><br><span>المدير</span></div>
+        <div class="grid">
+            <div class="item" onclick="openApp('snake.html')"><i class="fas fa-gamepad"></i><br>الثعبان</div>
+            <div class="item" onclick="openApp('race.html')"><i class="fas fa-car"></i><br>السباق</div>
+            <div class="item" onclick="openApp('calc.html')"><i class="fas fa-calculator"></i><br>الحاسبة</div>
+            <div class="item" onclick="openApp('todo.html')"><i class="fas fa-tasks"></i><br>المهام</div>
+            <div class="item" onclick="openApp('contact.html')"><i class="fas fa-envelope"></i><br>اتصل بي</div>
+            <div class="item" onclick="openApp('admin.html')"><i class="fas fa-user-shield"></i><br>المدير</div>
         </div>
     </div>
 
-    <audio id="bgMusic" loop><source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
-
     <script>
-        // وظيفة البحث
-        function searchApps() {
-            let input = document.getElementById('searchInput').value.toLowerCase();
-            let items = document.getElementsByClassName('item');
-            for (let i = 0; i < items.length; i++) {
-                let name = items[i].getElementsByTagName('span')[0].innerText;
-                if (name.toLowerCase().includes(input)) { items[i].classList.remove('hidden'); }
-                else { items[i].classList.add('hidden'); }
-            }
+        // تأثير حركة الشعار
+        const logo = document.getElementById('logo');
+        function tiltLogo(e) {
+            const rect = logo.getBoundingClientRect();
+            const x = e.clientX - rect.left - rect.width/2;
+            const y = e.clientY - rect.top - rect.height/2;
+            logo.style.transform = `rotateX(${-y/10}deg) rotateY(${x/10}deg)`;
         }
-
-        // تغيير لون النجوم
-        let starColor = '#d4af37'; // لون النجوم الافتراضي ذهبي
-        function changeStarColor(color) { starColor = color; }
+        function resetLogo() { logo.style.transform = `rotateX(0deg) rotateY(0deg)`; }
 
         function openApp(url) { document.getElementById('appFrame').src = url; document.getElementById('gameModal').style.display = "block"; }
         function closeApp() { document.getElementById('gameModal').style.display = "none"; document.getElementById('appFrame').src = ""; }
@@ -117,18 +86,11 @@
         canvas.width = window.innerWidth; canvas.height = window.innerHeight;
         let stars = [];
         for(let i=0; i<150; i++) stars.push({x:Math.random()*canvas.width, y:Math.random()*canvas.height, s:Math.random()*2});
-
         function animate() {
             ctx.clearRect(0,0,canvas.width, canvas.height);
-            ctx.fillStyle = starColor; // استخدام اللون المتغير
+            ctx.fillStyle = '#d4af37';
             stars.forEach(s => { ctx.beginPath(); ctx.arc(s.x, s.y, s.s, 0, Math.PI*2); ctx.fill(); s.y += 0.5; if(s.y > canvas.height) s.y=0; });
             requestAnimationFrame(animate);
-        }
-
-        function toggleMusic() {
-            let m = document.getElementById("bgMusic");
-            if(m.paused) { m.play(); document.getElementById("mIcon").className="fas fa-pause"; }
-            else { m.pause(); document.getElementById("mIcon").className="fas fa-play"; }
         }
         function init() { animate(); }
     </script>
